[project]
name = "mcp-handson-examples"
version = "0.1.0"
description = "MCP Handson Examples"
requires-python = ">=3.11"
dependencies = [
    "starlette==0.48.0",
    "mcp==1.18.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true